--- a/prism-outreach/src/app/views/dashboard/dashboard.html
+++ b/prism-outreach/src/app/views/dashboard/dashboard.html
@@ -1736,7 +1736,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <h5 class="modal-title" style="font-size:16px; font-weight:500 !important;"
+                <h5 class="modal-title text-uppercase" style="font-size:16px; font-weight:500 !important;"
                     *ngIf="memberDetails?.length">
                     <i class="fa fa-info-circle" aria-hidden="true"></i>
                     | {{memberDetails[0].FIRST_NAME}} {{memberDetails[0].LAST_NAME}} | ENROLLEE NO -
@@ -2068,18 +2068,15 @@
                                     <div class="tbl_scorll">
                                         <div class="row">
                                             <div class="col-lg-4">
-                                                <form >
-                                                    <input type="hidden" name="medicaid_id" value="medicaid_id">
+                                                <form [formGroup]="altPhoneFormGroup" (ngSubmit)="add_alt_phone_submit()">
+                                                    <input type="hidden" formControlName="medicaid_id" value="medicaid_id">
                                                     <div class="col-lg-12  mt-3">
                                                         <input type="text"
                                                             placeholder="Alternate Phone No"
-                                                            name="alt_phone_no"
+                                                            formControlName="alt_phone_no"
                                                             id="alt_phone_no"
                                                             class="form-control text-uppercase"
-                                                            maxlength="10"
-                                                            oninput="this.value = this.value.replace(/[^0-9]/g, '')"
-                                                            inputmode="numeric"
-                                                            required>
+                                                            onkeyup="formatPhoneNumber(this.value);" maxlength="10" pattern="\(\d{3}\) \d{3}-\d{4}" title="Enter phone number in format: (123) 456-7890"  inputmode="numeric" required>
 
                                                     </div>
                                                     <div class="col-lg-12  mt-3" align="right">
@@ -2099,9 +2096,15 @@
                                                         </tr>
                                                         </thead>
                                                         <tbody>                                                        
-                                                            <tr>
-                                                                <td colspan="3" align="center">No alt phone found.</td>
-                                                            </tr>
+                                                             <tr *ngIf="member_alt_phone_details.length == 0">
+                                                                    <td colspan="3" align="center">No record found.</td>
+                                                                </tr>   
+                                                                
+                                                                <tr *ngFor="let alt_phone of member_alt_phone_details; let i = index">
+                                                                    <td class="text-uppercase">{{ alt_phone.alt_phone_no }}</td>
+                                                                    <td class="text-uppercase">{{ alt_phone.FistName }}</td>
+                                                                    <td class="text-uppercase">{{ alt_phone.add_date }}</td>
+                                                                </tr>
                                                         </tbody>
                                                     </table>
                                                 </div>
@@ -2119,6 +2122,58 @@
                                 <h4 align="center">ALT LANGUAGE</h4>
                                 <div class="box_height">
                                     <div class="tbl_scorll">
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <form [formGroup]="altLangFormGroup" (ngSubmit)="add_alt_language_submit()">
+                                                    
+                                                    <input type="hidden" formControlName="medicaid_id" value="medicaid_id">
+                                                    <input type="hidden" id="alt_language_name" formControlName="alt_language_name" class="form-control" readonly>
+
+                                                    <div class="col-lg-12  mt-3">
+                                                        <select formControlName="alt_language"
+                                                            class="w-100"
+                                                            (change)="get_language_name($event)"
+                                                            required id="alt_language">
+
+                                                        <option value="">SELECT</option>
+                                                        <option *ngFor="let language of all_language_master_list" 
+                                                                [value]="language.LANGUAGE_CD">
+                                                            {{ language.LANGUAGE_DESC }}
+                                                        </option>
+                                                    </select>
+                                                    </div>
+                                                    <div class="col-lg-12  mt-3" align="right">
+                                                        <input class="btn btn-primary" type="submit" value="SAVE">
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="col-lg-8">
+                                                <div class="tbl_scorll">
+                                                    <table class="table table-sm" style="font-size:14px;">
+                                                        <thead>
+                                                        <tr>
+                                                            <th class="text-uppercase;">Alt Language</th>
+                                                            <th class="text-uppercase;">Added By (INITIAL)</th>
+                                                            <th class="text-uppercase;">Added Date</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody> 
+                                                            <tr *ngIf="member_alt_language_details.length == 0">
+                                                                    <td colspan="3" align="center">No record found.</td>
+                                                                </tr>   
+                                                                
+                                                                <tr *ngFor="let member_alt_language of member_alt_language_details; let i = index">
+                                                                    <td class="text-uppercase">{{ member_alt_language.alt_language }}</td>
+                                                                    <td class="text-uppercase">{{ member_alt_language.FistName }}</td>
+                                                                    <td class="text-uppercase">{{ member_alt_language.add_date }}</td>
+                                                                </tr>
+
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+
+                                            </div>
+                                        </div>
 
                                     </div>
                                 </div>
@@ -2132,6 +2187,23 @@
                                 <h4 align="center">PCP LIST </h4>
                                 <div class="box_height">
                                     <div class="tbl_scorll">
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
+                                                <th>PHYSICIAN</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>  
+                                                 <tr *ngIf="pcp_list.length == 0">
+                                                    <td colspan="3" align="center">No record found.</td>
+                                                </tr>   
+                                                
+                                                <tr *ngFor="let pcp of pcp_list; let i = index">
+                                                    <td class="text-uppercase">{{ pcp.PROVIDER_NAME }} , NPI : {{ pcp.PROVIDER_ID }}</td> 
+                                                </tr>
+
+                                            </tbody>
+                                        </table>
 
                                     </div>
                                 </div>
